# esp-lcd-ili9486

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  ili9486_display.c  ili9486_display.h  layout
examples/basic_init/: CMakeLists.txt
examples/basic_init/main/: CMakeLists.txt  main.c  panel_init.c  panel_init.h  tests.c  tests.h
examples/https/: CMakeLists.txt  README.md  sdkconfig.old
examples/https/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lcd_init.c  lcd_output.c  main.c  pan_control.c  pan_control.h
examples/ipcam/: CMakeLists.txt  README.md  sdkconfig.old
examples/ipcam/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lcd_init.c  lcd_init.h  lcd_output.c  lcd_output.h  main.c
examples/lvgl_demo/: CMakeLists.txt  sdkconfig.defaults
examples/lvgl_demo/main/: CMakeLists.txt  main.c  panel_lvgl_init.c  panel_lvgl_init.h  tests.c  tests.h
src/: esp_ili9486_panel.c
test/: CMakeLists.txt  test_esp_ili9486_panel.c
test_app/: CMakeLists.txt  sdkconfig.defaults
test_app/main/: CMakeLists.txt  test_main.c
